# dissect.hypervisor

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/hypervisor/: __init__.py  exceptions.py
dissect/hypervisor/backup/: c_vbk.py  c_vma.py  c_wim.py  vbk.py  vma.py  wim.py  xva.py
dissect/hypervisor/descriptor/: c_hyperv.py  hyperv.py  ovf.py  pvs.py  vbox.py  vmx.py
dissect/hypervisor/disk/: asif.py  c_asif.py  c_asif.pyi  c_hdd.py  c_qcow2.py  c_qcow2.pyi  c_vdi.py  c_vdi.pyi  c_vhd.py  c_vhdx.py  c_vmdk.py  c_vmdk.pyi  hdd.py  qcow2.py  vdi.py  vhd.py  vhdx.py  vmdk.py
dissect/hypervisor/tools/: backup.py  envelope.py  vma.py  vmtar.py
dissect/hypervisor/util/: envelope.py  vmtar.py
tests/: conftest.py  test_backup.py  test_envelope.py  test_hdd.py  test_hyperv.py  test_ovf.py  test_pvs.py  test_vbk.py  test_vbox.py  test_vhd.py  test_vhdx.py  test_vma.py  test_vmdk.py  test_vmtar.py  test_vmx.py
tests/_data/descriptor/hyperv/: test.VMRS  test.vmcx
tests/_data/descriptor/vbox/: GOAD-DC01.vbox  encrypted.vbox
tests/_data/descriptor/vmx/: encrypted.vmx
tests/_data/disk/hdd/expanding.hdd/: DiskDescriptor.xml
tests/_data/disk/hdd/plain.hdd/: DiskDescriptor.xml
tests/_data/disk/hdd/split.hdd/: DiskDescriptor.xml
tests/_data/util/envelope/: encryption.info  local.tgz.ve
tests/_data/util/vmtar/: test.vgz
tests/_docs/: conf.py
tests/_tools/disk/vdi/: generate.sh
tests/_tools/disk/vmdk/: generate.sh
tests/data/: encrypted.vmx  encryption.info  local.tgz.ve  test.vgz
tests/data/plain.hdd/: DiskDescriptor.xml
tests/data/split.hdd/: DiskDescriptor.xml
tests/descriptor/: test_hyperv.py  test_vbox.py  test_vmx.py
tests/disk/: test_asif.py  test_hdd.py  test_qcow2.py  test_vdi.py  test_vhd.py  test_vhdx.py  test_vmdk.py
tests/util/: test_envelope.py  test_vmtar.py
