[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.hypervisor
license = Affero General Public License v3
description = A Dissect module implementing parsers for various hypervisor disk, backup and configuration files
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
